      large monolithic file, otherwise if .gig file is < 2 GB check for
      "extension" files (.gx01, .gx02, ...) instead.
    - fixed Region::UpdateUpdateVelocityTable() which did not work correctly
      if there were dimensions after the velocity dimension: it only created
      valid velocity tables for cases of dimensions lower than the velocity
      dimension.

  * src/DLS.cpp, src/DLS.h:
    - Sample: wave pool offsets are now 64 bits (to allow support for files
      larger than 4 GB).
      
  * src/RIFF.cpp, src/RIFF.h:
    - added support for RIFF files larger than 4 GB, by default the required
      internal RIFF file offset size is automatically detected (that is RIFF
      files < 4 GB automatically use 32 bit offsets while files >= 4 GB
      automatically use 64 bit offsets), a particular offset size can be forced
      with a new option added to the RIFF File constructor though
    - when saving a modified, grown RIFF file, the temporary file size during
      Save() operation will no longer be larger than the final grown file size

  * src/tools/akaidump.cpp, src/tools/akaiextract.cpp:
    - improved output of non-ascii characters in usage messages
    - fixed printf format strings

  * src/tools/korg2gig.cpp:
    - fixed c++11 narrowing warnings
    - fixed fine tuning which was not translated at all

  * src/tools/gigdump.cpp:
    - additionally print VelocityUpperLimit and DimensionUpperLimits of all
      dimension regions
    - additionally print RIFF chunk file offset and RIFF chunk size of sample
      data

  * src/tools/gigextract.cpp:
    - Fix: if sample name contains a path separator (slash or backslash) then
      replace them by a minus sign to avoid file system issues.

  * packaging changes:
    - Automake: set environment variable GCC_COLORS=auto to allow GCC to
      auto detect whether it (sh/c)ould output its messages in color.

Version 4.0.0 (14 Jul 2015)
  * general changes:
    - minor Makefile fix for parallel make